# NOTTControl

./: .gitignore  MANIFEST.in  README.md  config.ini  delay_lines.ui  infratec_interface_server.py  main.py  main_window.ui  motorwidget.py  motorwidget.ui  opcua.py  pyproject.toml  redisclient.py  scifygui.py  shutter_widget.ui  shutters.ui  shutters_window.py  shutterwidget.py  test.py  tiptilt_window.py  tiptilt_window.ui
camera/: brightness_calculator.py  infratec_client.py  infratec_interface.py  mainwindow.ui  mainwindow_ui.py  parametersdialog.py  redisclient.py  roi_filewriter.py  roiwidget.py  roiwidget.ui  scify.py
camera/visible/: visible_cameras.ini  visible_cameras.ui  visible_cameras_gui.py
commands/: async_command.py  command_sequence.py  move_abs_command.py  move_rel_command.py  scan_fringes_command.py  start_camera_recording_command.py  stop_camera_recording_command.py  sync_command.py
components/: motor.py  shutter.py
nott-llc/: .gitignore  METIS_CRYO.library
nott-llc/LCS/: .gitignore
nottcontrol/: __init__.py  asgard_db.ini  cal_test.py  config.ini  config.py  delay_lines.ui  gui_style.py  main.py  motorwidget.py  motorwidget.ui  nott_config.ini  opcua.py  redisclient.py  scifygui.py  sensors.ini  sensors.py  shutter_widget.ui  shutters_window.py  shutterwidget.py  test1.py  test2.py  tip_tilt.ui  tip_tilt_control.py  tip_tilt_control.ui  tiptilt_window.py  tiptilt_window.ui  tiptiltwidget.py
nottcontrol/camera/: brightness_calculator.py  (+10 more)
scipt/: fringe_scan_analysis.py  nott_cophase.py
wag/: agifbBackEnd.py  read_vlt_parameter.py
(+2212 files in other folders)
