[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "nottcontrol"
version = "0.0"
description = "Software package for the high level control of the NOTT instrument"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
  "PyQt5",
  "asyncua",
  "pyqtgraph",
  "numpy",
  "scipy",
  "opencv-contrib-python",
  "redis",
  "pyzmq",
  "sympy",
  "matplotlib"]